--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,30 @@ hr {
 
    p {
      text-indent: 20px;
+     font-size: 22px;
+
+     font-family: Arial, Helvetica, sans-serif;
+   }
+   h2 {
+
+     font-family: Arial, Helvetica, sans-serif;
+   }
+
+   #Left{
+     left: 10px;
+     top:10px;
+     width:228px;
+     height:300px;
+   }
+
+   #content{
+     top:10px;
+     position:absolute;
+     left:248px;
+   }
+
+   body{
+     margin:0px;
    }
 
 audio,
