--- a/css/main.css
+++ b/css/main.css
@@ -34,18 +34,28 @@ hr {
 
      font-family: Arial, Helvetica, sans-serif;
    }
+   img {
+     border-radius: 20px;
+
+   }
+
+   MyPhoto {
+
+   }
 
    #Left{
-     left: 10px;
-     top:10px;
      width:228px;
-     height:300px;
+
+     border-radius: 100px;
+     margin-left: 10px;
+     margin-top: 20px;
    }
 
    #content{
      top:10px;
      position:absolute;
-     left:248px;
+     left:258px;
+     right: 100px;
    }
 
    body{
